--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,19 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
-        run: |
-          docker build -t simon7968/autodeployx:latest .
-
-      - name: Push Docker image
-        run: |
-          docker push simon7968/autodeployx:latest
+    - name: Build and Push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        push: true
+        tags: YOUR_DOCKER_USERNAME/autodeployx:latest
